Fixed carousel issue where it was breaking up on tablets.

--- a/frontend/scss/components/_carousel.scss
+++ b/frontend/scss/components/_carousel.scss
@@ -1,5 +1,5 @@
 #carouselLanding{
-  .carousel-item{
+  .carousel-item img{
     @include media-breakpoint-up(md) { 
     height: calc(100vh - 67px);
     }
